fix: header width fixed on mobile

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -152,6 +152,7 @@
     
     .container{
         margin: 0;
+        width: 100%;
     }
     .header{
         /* padding: 15px 0px 15px 0px; */
